# static-assertions

./: Cargo.toml
proc/: Cargo.toml
proc/src/: calledby.rs  calls.rs  consumes.rs  lib.rs  mutatedby.rs  mutates.rs  private_fields.rs  size_align.rs  whitelist.rs
proc/src/parser/: field_whitelist.rs  fnwhitelist.rs  mod.rs  whitelist.rs
proc/tests/: calledby.rs  calls.rs  consumes.rs  mutatedby.rs  mutates.rs  private.rs  size.rs  whitelist.rs
src/: assert_cfg.rs  assert_fields_type.rs  assert_fn_consumes.rs  assert_function_consumes.rs  assert_type.rs  lib.rs  whitelist_macro.rs
tests/: const.rs  eq_size.rs  fields.rs  functions.rs  obj_safe.rs  trait_impl.rs  type_eq.rs  type_ne.rs
