[package]
name = "proc_static_assertions"
version = "0.0.0"
edition = "2021"
authors = ["Nikolai Vazquez", "Anton Melnychuk"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
homepage = "https://github.com/nvzqz/static-assertions-rs"
repository = "https://github.com/nvzqz/static-assertions-rs"
documentation = "https://docs.rs/proc_static_assertions/"
categories = ["no-std", "rust-patterns", "development-tools::testing"]
keywords = ["assert", "static", "testing"]
description = "Compile-time assertions via procedural macros."
include = ["Cargo.toml", "src/**/*.rs", "README.md", "CHANGELOG.md", "LICENSE*"]

[lib]
proc-macro = true

[badges]
travis-ci = { repository = "nvzqz/static-assertions-rs" }
is-it-maintained-open-issues = { repository = "nvzqz/static-assertions-rs" }
is-it-maintained-issue-resolution = { repository = "nvzqz/static-assertions-rs" }
maintenance = { status = "passively-maintained" }

[features]
nightly = []
proc_static_assertions = []


# proc_macro2: This is a separate to compiler based proc_macro crate that provides a more 
# flexible and ergonomic API for working with Rust's procedural macros. It's designed to 
# facilitate manipulation of Rust syntax trees (AST) and token streams.

[dependencies]
syn = { version = "2.0.68", features = ["full"] }
proc-macro2 = "1.0.86"
quote = "1.0.36"
